2025-12-08T01:02:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20013350491 # 832
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 684 1078 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 685 1079 / 686 1080
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-20] / [2025-12-07]

2025-11-29T00:58:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19776715409 # 823
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-29
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 683 1077 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 684 1078 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-14] / []

2025-11-26T01:00:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19688954691 # 820
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 682 1076 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 683 1077 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-12] / []

2025-11-25T00:59:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19654540605 # 819