@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-08T01:02:08Z",
+  "timestamp" : "2025-12-11T01:04:05Z",
   "count_outdated" : 1079,
   "uniques_outdated" : 685,
-  "count" : 1080,
-  "uniques" : 686,
+  "count" : 1081,
+  "uniques" : 687,
   "clones" : [
     {
       "timestamp": "2025-12-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
